tests/org.eclipse.n4js.bugreports.tests/xt-tests/IDEBUG_0298_subtypeRuleForConstructorTypeRefs.n4js.xt
/*
 * Copyright (c) 2016 NumberFour AG.
 * All rights reserved. This program and the accompanying materials
 * are made available under the terms of the Eclipse Public License v1.0
 * which accompanies this distribution, and is available at
 * http://www.eclipse.org/legal/epl-v10.html
 *
 * Contributors:
 *   NumberFour AG - Initial API and implementation
 */

/* XPECT_SETUP org.eclipse.n4js.bugreports.tests.SpecXtTest END_SETUP  */

class C {

	<Tx> mx() {
		var tx1 : Tx;
		var tx2 : Tx;
		// XPECT noerrors -->
		tx1 = tx2; // ok

		var t1 : constructor{Tx};
		var t2 : constructor{Tx};
		// XPECT noerrors -->
		t1 = t2; // error: "constructor{Tx} is not a subtype of constructor{Tx}"
	}
}
